--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body{
+    background-color:black ;
+}
+
 .loader,
 .loader:before,
 .loader:after {
@@ -5,12 +9,12 @@
   -webkit-animation: load1 1s infinite ease-in-out;
   animation: load1 1s infinite ease-in-out;
   width: 1em;
-  height: 4em;
 }
 .loader {
   color: #002ff1;
   text-indent: -9999em;
-  margin: 88px auto;
+  /* height: 100vh; */
+  margin: 400px auto;
   position: relative;
   font-size: 11px;
   -webkit-transform: translateZ(0);
