--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,52 +18,52 @@
     background-color: transparent;
     border: 1px solid #fff;
     border-radius: 50%;
-    animation: bubble 10s ease-in infinite;
+    animation: bubble 50s ease-in infinite;
     }
      
     .bubble:nth-child(1) {
     width: 20px;
     height: 20px;
     left: 30%;
-    animation-duration: 6s;
+    animation-duration: 80s;
     }
      
     .bubble:nth-child(2) {
     left: 20%;
-    animation-duration: 3.5s;
+    animation-duration: 60s;
     }
      
     .bubble:nth-child(3) {
     width: 30px;
     height: 30px;
     left: 30%;
-    animation-duration: 7s;
+    animation-duration: 29s;
     }
      
     .bubble:nth-child(4) {
     width: 50px;
     height: 50px;
     left: 67%;
-    animation-duration: 6s;
+    animation-duration: 70s;
     }
      
     .bubble:nth-child(5) {
     width: 20px;
     height: 20px;
     left: 70%;
-    animation-duration: 4.5s;
+    animation-duration: 70s;
     }
      
     @keyframes bubble {
       0% {
-        bottom: -100px;
-        transform: translateX(0);
+        bottom: -2000px;
+        transform: translateX(-100px);
       }
       50% {
         transform: translateX(100px);
       }
       100% {
-        bottom: 2000px;
+        bottom: 100px;
       }
     }
 
