--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,71 +1,4 @@
 
-     
-    .bubbles {
-
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    }
-     
-    .bubble {
-    position: absolute;
-    bottom: -40;
-    width: 40px;
-    height: 40px;
-    background-color: transparent;
-    border: 1px solid #fff;
-    border-radius: 50%;
-    animation: bubble 50s ease-in infinite;
-    }
-     
-    .bubble:nth-child(1) {
-    width: 20px;
-    height: 20px;
-    left: 30%;
-    animation-duration: 80s;
-    }
-     
-    .bubble:nth-child(2) {
-    left: 20%;
-    animation-duration: 60s;
-    }
-     
-    .bubble:nth-child(3) {
-    width: 30px;
-    height: 30px;
-    left: 30%;
-    animation-duration: 29s;
-    }
-     
-    .bubble:nth-child(4) {
-    width: 50px;
-    height: 50px;
-    left: 67%;
-    animation-duration: 70s;
-    }
-     
-    .bubble:nth-child(5) {
-    width: 20px;
-    height: 20px;
-    left: 70%;
-    animation-duration: 70s;
-    }
-     
-    @keyframes bubble {
-      0% {
-        bottom: -2000px;
-        transform: translateX(-100px);
-      }
-      50% {
-        transform: translateX(100px);
-      }
-      100% {
-        bottom: 100px;
-      }
-    }
 
 body{
     
@@ -80,6 +13,8 @@ header{
     justify-content: space-between;
     margin: 15px;
     font-size: 20px;
+    color: blue;
+    text-shadow:5px 5px 5px white ;
 }
 .main-img{
     background-image: url('../img/photo-1560259324-12a044e67c34.jpeg');
@@ -98,6 +33,7 @@ header{
 }
 .container2{
     height: 5000px;
+    
     background: linear-gradient( #051e35,black ) fixed;
 }
 .container3{
